[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bits"
version = "0.1.0"
authors = [{name = "Jason Traub", email = "jtraub91@gmail.com"}]
requires-python = ">=3.7"

[project.scripts]
bits = "bits.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = [
    "--cov=bits",
    "--doctest-modules"
]
